2009-09-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jp2.c (ReadJP2Image): Fix scaling problem noticed when
	reading 12-bit JP2 format.  Problem was reported by Steve Shaw.

2009-09-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/unix_port.c (MagickGetMMUPageSize): Cache returned page
	size to eliminated repeated system calls.

	* magick/operator.c (QuantumOperatorRegionImage): Fix missing
	percent in progress monitor message.

2009-09-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/meta.c (GetIPTCStream): Should return IPTC block length
	rather than remaining blob length.  Patch submitted by John
	Sergeant.

2009-09-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/meta.c (GetIPTCStream): IPTC blobs should be padded to an
	even size.  Patch submitted by John Sergeant.

2009-09-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteGROUP4RAWImage): Added a GROUP4RAW encoder.

	* coders/cals.c (Huffman2DEncodeImage): Fix test failures when
	doing I/O to an in-memory blob.

	* coders/pcl.c (WritePCLImage): Use a different control code to
	(hopefully) eject the page.  Patch submitted by John Sergeant.

2009-09-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/Makefile.am: Add CALS tests.  Skip testing deep images for
	most formats which don't support deep images.

	* coders/cals.c: CALS module was not being built under Windows
	with MSVC.  Now it is.

	* VisualMagick/configure/configure.cpp (process_library): CALS
	module is dependent on TIFF library.

	* coders/cals.c (WriteCALSImage): Allow CALS writing at any time,
	but only enable CALS reader if libtiff is present at build time.

	* coders/{cals.c,pdf.c,ps2.c,ps3.c} (Huffman2DEncodeImage): Force
	TIFF image type to bilevel type.

	* config/modules.mgk, VisualMagick/bin/modules.mkg: CAL-->CALS
	rather than CALS-->CAL.

2009-09-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
