@@ -26,6 +26,8 @@
 <UL>
   <LI> coders/jp2.c (ReadJP2Image): Fix scaling problem noticed when
         reading 12-bit JP2 format.  Problem was reported by Steve Shaw.
+        (WriteJP2Image): Support writing JP2 files with arbitrary depth
+        ranging from 2 to 16 rather than just 8 or 16.
 
 </UL>
 <p>
